1410-data-grid-context-submenu-cutoff (added js fix for FF and Safari)

--- a/src/components/ids-menu/ids-menu-group.scss
+++ b/src/components/ids-menu/ids-menu-group.scss
@@ -8,9 +8,15 @@
 .ids-menu-group {
   @include reset-menu-style();
 
-  display: flex;
-  flex-flow: column wrap;
-  max-height: 90vh;
-  max-width: 100vw;
-  width: max-content; // Doesn't work in Safari and Firefox
+
+  &.megamenu {
+    display: flex;
+    flex-flow: column wrap;
+    max-height: 90vh;
+    max-width: 100vw;
+    // NOTE: "width: max-content" doesn't work in Safari and Firefox
+    // So added "aftershow" menu event to configure with manually
+    // @see IdsMenuGroup.configureMegaMenu()
+    width: max-content;
+  }
 }
